--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
@@ -37,11 +37,11 @@
                       
                         <div class="col-md-6">
                             <header class="panel-heading" style="padding: 2px 0px">
-                                Create News Image
+                                Create News Vidos
                             </header>
                             <div class="form-group">
                                 <div class="col-lg-11">
-                                    <input asp-for="viodPath" id="f-name" class="form-control" required>
+                                    <input asp-for="viodPath" id="f-name" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group" style="margin-left: 53%;">
@@ -53,12 +53,12 @@
                         </div>
                         <div class="col-md-6">
                             <header class="panel-heading" style="padding: 2px 0px">
-                                Create News Video
+                                Create News Images
                             </header>
                           
                             <div class="form-group">
                                 <div class="col-lg-11">
-                                    <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" required>
+                                    <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" >
                                 </div>
                             </div>
                             <div class="form-group" style="margin-left: 53%;">
@@ -69,7 +69,7 @@
                             </div>
                         </div>
 
-                       
+                        <div class="col-md-6"></div>
                     </form>
                 </div>
             </section>
