--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
@@ -35,16 +35,13 @@
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Update" method="post" enctype="multipart/form-data">
-                        @if (Model.VidoPath != null)
+                        @if (Model.VidoPath != null && Model.Images != null)
                         {
                             <div class="form-group">
                                 <div class="col-lg-11">
                                     <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath">
                                 </div>
                             </div>
-                        }
-                        else
-                        {
                             <div class="wrapper--preview">
                                 @if (Model.Images == null | Model.Images.Count < 1)
                                 {
@@ -67,6 +64,39 @@
                                     </div>
                                 }
                             </div>
+                        }
+                        else if (Model.VidoPath != null)
+                        {
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath">
+                            </div>
+                        </div>
+                        }
+                        else 
+                        {
+                        <div class="wrapper--preview">
+                            @if (Model.Images == null | Model.Images.Count < 1)
+                            {
+                                <input type="file" asp-for="files" multiple="multiple" />
+                            }
+                            @foreach (var item in Model.Images)
+                            {
+                                <div class="box">
+                                    <div class="js--image-preview">
+                                        <img src="@item.Path" alt="Alternate Text" />
+                                        <input type="hidden" />
+                                    </div>
+                                    <div class="upload-options">
+
+                                        <label>
+
+                                            <input id="@item.Id" type="file" asp-for="files" onclick="cenerateInput(@item.Id);" />
+                                        </label>
+                                    </div>
+                                </div>
+                            }
+                        </div>
                         }
 
 
