--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -18,4 +18,5 @@
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.Blog
 @using ConstructionSite.DTO.AdminViewModels.Contact
-@using ConstructionSite.Areas.Core 
+@using ConstructionSite.Areas.Core
+@using ConstructionSite.Extensions.Strings 
