--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -46,24 +46,27 @@
                                 <input type="text" asp-for="NameRu" placeholder="Name RU" id="f-name" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group ">
+
+
+
+                        <div class="form-group">
                             <div class="col-lg-11">
-                                <textarea placeholder="Tittle AZE" rows="15" class="form-control " id="ccomment" asp-for="TitleAz" required=""></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group ">
-                            <div class="col-lg-11">
-                                <textarea placeholder="Tittle ENG" rows="15" class="form-control " id="ccomment" asp-for="TitleEn" required=""></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group ">
-                            <div class="col-lg-11">
-                                <textarea placeholder="Tittle RU" rows="15" class="form-control " id="ccomment" asp-for="TitleRu" required=""></textarea>
+                                <textarea type="text" asp-for="ContentAz" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" asp-for="FileData"  id="f-name" class="form-control">
+                                <textarea type="text" asp-for="ContentEn" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <textarea type="text" asp-for="ContentRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <input type="file" asp-for="FileData" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
