--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -52,7 +52,7 @@
                                 <input asp-for="NameRu" class="form-control " id="ccomment" placeholder="Name RU" />
                             </div>
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <div class="col-lg-11">
                                 <textarea type="text" asp-for="TittleAz" rows="15" id="f-name" class="form-control" placeholder="Title AZE"></textarea>
                             </div>
@@ -66,7 +66,7 @@
                             <div class="col-lg-11">
                                 <textarea type="text" asp-for="TittleRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <div class="col-lg-11">
                                 <textarea type="text" asp-for="ContentAz" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
