--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -38,7 +38,7 @@
                                         <div class="service-item clearfix">
                                             <div class="thumb"><img class="sekil" src="@item.image" width="370" height="300"></div>
                                             <div class="service-item-wrap">
-                                                <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
+                                                <h3 class="title font-size-18"><a>@item.Name</a></h3>
                                                 <p service-index="@item.Tittle"></p>
                                                 
                                             </div>
