--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -25,10 +25,10 @@
                                 <div class="member">
                                     <div class="inner">
                                          <div class="images">
-                                            <div class="thumb"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id"><img src="@item.image" ></a></div>
+                                            <div class="thumb"><a  ><img src="@item.image" ></a></div>
                                          </div>
                                          <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
+                                            <h3 class="title font-size-18"><a >@item.Name</a></h3>
                                             <p class="desc" size="@item.Tittle"></p>
                                          </div>
                                     </div>
