about page done

--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -5,8 +5,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="images">
-                    <img src="@Model.Image"  alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%;object-fit: cover">
+                <div class="images aboutImage">
+                    <img src="@Model.Image"  alt="image" draggable="false" style="height: 100%; width: 100%;object-fit: cover">
                 </div>
 
 
