--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -40,7 +40,7 @@
                 </div>
                 <!-- /.wprt-team -->
 
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                @*<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>*@
             </div>
             <!-- /.col-md-12 -->
         </div>
