--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -77,11 +77,11 @@
                                 <tr class="odd">
 
                                     <td class="sorting_1 img-style">@item.Tittle</td>
-                                    <td class="img-style img-style">About Content</td>
+                                    <td class="img-style img-style">@item.Content</td>
                                     <td class="img-style img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
-                                        <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash" style="color: #F0636A; font-size: 1.3em;" aria-hidden="true"></i></a>
+                                        @*<a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash" style="color: #F0636A; font-size: 1.3em;" aria-hidden="true"></i></a>*@
                                     </td>
                                 </tr>
                             }
