--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -71,7 +71,7 @@
                             {
                                 <tr class="odd">
                                     <td class="sorting_1 img-style">@item.Name</td>
-                                    <td class="img-style">Project Content</td>
+                                    <td class="img-style">@item.Content</td>
                                     <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
