--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -45,7 +45,7 @@
                     <td>
                         @admin.UserName
                         <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id" style="width: 110px; margin-left: 14%; text-align: center;"><i class="fa fa-pencil-square-o fa-2" style="color: #6E90EC; padding-right: 7%; font-size: 1.3em;" aria-hidden="true"></i></a>
-                        <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id" style="text-align: center;"><i class="fa fa-trash" style="color: #F0636A; font-size: 1.3em;" aria-hidden="true"></i></a>
+                        @*<a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id" style="text-align: center;"><i class="fa fa-trash" style="color: #F0636A; font-size: 1.3em;" aria-hidden="true"></i></a>*@
                     </td>
                 </tr>
             </tbody>
