--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -18,5 +18,6 @@
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.Blog
 @using ConstructionSite.DTO.AdminViewModels.Contact
+@using ConstructionSite.ViwModel.AdminViewModels.Slider
 @using ConstructionSite.Areas.Core
 @using ConstructionSite.Extensions.Strings 
