--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Index.cshtml
@@ -50,7 +50,7 @@
 
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Service Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Slider" asp-action="Add" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Service Element</a>
         </div>
         <div class="adv-table editable-table ">
 
