--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -5,6 +5,6 @@
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index" style="font-size: 1.1em;">Portfolio</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Index" style="font-size: 1.1em;">Projects</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Index">Galeries</a></li>
-<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index" style="font-size: 1.1em;">Contact</a></li>
-<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Slider" asp-action="Add" style="font-size: 1.1em;">Slider</a></li>
-<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Show" asp-action="Index" style="font-size: 1.1em;">Messages</a></li>
+@*<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index" style="font-size: 1.1em;">Contact</a></li>*@
+<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Slider" asp-action="Index" style="font-size: 1.1em;">Slider</a></li>
+@*<li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Show" asp-action="Index" style="font-size: 1.1em;">Messages</a></li>*@
