--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Update.cshtml
@@ -69,26 +69,25 @@
                         </div>
                         <div class="wrapper--preview">
 
-                            @if (Model.Images == null)
+                            @if (string.IsNullOrEmpty(Model.pathImage) == null)
                             {
                                 <input type="file" asp-for="files" />
                             }
-                            @foreach (var item in Model.Images)
-                            {
+                           
                                 <div class="box">
                                     <div class="js--image-preview">
-                                        <img src="@item.Path" alt="Alternate Text" />
+                                        <img src="@Model.pathImage" alt="Alternate Text" />
                                         <input type="hidden" />
                                     </div>
                                     <div class="upload-options">
 
                                         <label>
 
-                                            <input id="@item.Id" type="file" asp-for="files" onclick="cenerateInput(@item.Id);" />
+                                            <input id="@Model.ImageID" type="file" asp-for="files" onclick="cenerateInput(@Model.ImageID);" />
                                         </label>
                                     </div>
                                 </div>
-                            }
+                          
                         </div>
 
                         <div class="form-group" style="margin-left: 72%;">
