--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -18,6 +18,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Project
 @using ConstructionSite.ViwModel.FrontViewModels.Galery
 @using ConstructionSite.ViwModel.AdminViewModels.Mail
+@using ConstructionSite.ViwModel.FrontViewModels.Slider 
 @using ConstructionSite.Helpers.Paging
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Localization
