--- a/ConstructionSite/wwwroot/Custom/css/customerImages.css
+++ b/ConstructionSite/wwwroot/Custom/css/customerImages.css
@@ -47,8 +47,8 @@
     font-size: 15px;
 }
 
-.col-sm-2 col-sm-2 control-label {
-    text-align: center;
+.text-00 h5 {
     font-weight: bold;
     color: black;
+    
 }
