--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -29,38 +29,55 @@
         <div class="col-lg-12">
             <section class="panel add-model">
                 <header class="panel-heading">
-                    Create News Elements
+                    Create Blog Elements
                 </header>
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE" required>
                             </div>
                         </div>
                         <div class="form-group">
+                             <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG" required>
                             </div>
                         </div>
                         <div class="form-group">
+                             <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU" required>
                             </div>
                         </div>
                         <div class="form-group ">
-                            <label class="col-sm-2 col-sm-2 control-label">Content Az</label>
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" required="" placeholder="Content EN"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" required="" placeholder="Content RU"></textarea>
                             </div>
