--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -21,12 +21,13 @@
         color: #fff;
     }
 </style>
-<div class="container">
+
     <div class="row">
         <div class="col-lg-12">
             <section class="panel add-model">
                 <header class="panel-heading">
-                    Add About Elements
+                   
+                    Create  About Elements
                 </header>
                 <hr />
                 <div class="panel-body add-body">
@@ -77,7 +78,7 @@
             </section>
         </div>
     </div>
-</div>
+
 
 @section scripts{
     <script>
