--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -46,13 +46,13 @@
 
 <section class="panel common">
     <header class="panel-heading">
-        News Elements Table
+        News About Table
     </header>
 
     <div class="panel-body">
         <div class="button-create">
            
-                <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New News Element</a>
+                <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Blog Element</a>
             
 
         </div>
@@ -67,6 +67,7 @@
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Create Date</th>
                             <th class="sorting edit-delete" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">#</th>
+                            
                         </tr>
                     </thead>
 
