--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
@@ -68,6 +68,9 @@
                          @if (Model.VidoPath != null)
                         {
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Vido Path</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath">
                             </div>
