--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -26,7 +26,7 @@
     <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
     <link href="~/Custom/css/updateBox.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="stylesheet" href="~/Custom/css/headerWord.css">
     <style>
         .nav-sidebar {
             margin-top: 7.5em !important;
@@ -133,11 +133,12 @@
         });
     </script>
     <script src="~/Custom/js/fileCenreated.js" asp-append-version="true"></script>
+ 
     <script>
         CKEDITOR.replace("ccomment")
         CKEDITOR.replace("ccomment1")
         CKEDITOR.replace("ccomment2")
     </script>
-  
+
 </body>
 </html>
