--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -25,7 +25,7 @@
         color: #fff;
     }
 </style>
-<div class="container">
+
     <div class="row">
         <div class="col-lg-12">
             <section class="panel add-model">
@@ -38,33 +38,51 @@
                         <input type="hidden" name="Id" value="@Model.Id" />
 
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content(Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content(En)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
+                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content(Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" placeholder="Content RU"></textarea>
                             </div>
                         </div>
 
@@ -102,7 +120,7 @@
             </section>
         </div>
     </div>
-</div>
+
 
 @section scripts{
 
