--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -39,7 +39,7 @@
                                 <h5>Title (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE" required>
+                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -47,7 +47,7 @@
                                 <h5>Title (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG" required>
+                                <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -55,7 +55,7 @@
                                 <h5>Title (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU" required>
+                                <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU" required="">
                             </div>
                         </div>
                         <div class="form-group ">
