--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -25,7 +25,7 @@
     }
 </style>
 
-<div class="container">
+
     <div class="row">
         <div class="col-lg-12">
             <section class="panel add-model">
@@ -36,18 +36,27 @@
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE" required="">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (En)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG" required="">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Title (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU" required="">
                             </div>
                         </div>
                        
@@ -63,7 +72,7 @@
             </section>
         </div>
     </div>
-</div>
+
 
 @section scripts{
     <script>
