--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -39,7 +39,7 @@
                                 <h5>Title (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE" required="">
+                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZ" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -47,7 +47,7 @@
                                 <h5>Title (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG" required="">
+                                <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title EN" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -63,7 +63,8 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                                @*<textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>*@
+                                <input asp-for="ContentAz" id="ccomment" class="form-control" placeholder="Content AZ" required="">
                             </div>
                         </div>
                         <div class="form-group ">
@@ -71,7 +72,7 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" required="" placeholder="Content EN"></textarea>
+                                <input asp-for="ContentEn" id="ccomment1" class="form-control" placeholder="Content EN" required="">
                             </div>
                         </div>
                         <div class="form-group ">
@@ -79,7 +80,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" required="" placeholder="Content RU"></textarea>
+                                <input asp-for="ContentRu" id="ccomment2" class="form-control" placeholder="Content RU" required="">
                             </div>
                         </div>
                         <div class="form-group">
