--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -61,7 +61,7 @@
                             <h5>Content (Az)</h5>
                         </label>
                         <div class="col-lg-11">
-                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                            <input asp-for="ContentAz" id="ccomment" class="form-control" placeholder="Content Az" required="">
                         </div>
                     </div>
                     <div class="form-group ">
@@ -69,7 +69,7 @@
                             <h5>Content (En)</h5>
                         </label>
                         <div class="col-lg-11">
-                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" placeholder="Content ENG"></textarea>
+                            <input asp-for="ContentEn" id="ccomment1" class="form-control" placeholder="Content EN" required="">
                         </div>
                     </div>
                     <div class="form-group ">
@@ -77,7 +77,7 @@
                             <h5>Content (Ru)</h5>
                         </label>
                         <div class="col-lg-11">
-                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" placeholder="Content RU"></textarea>
+                            <input asp-for="ContentRu" id="ccomment2" class="form-control" placeholder="Content RU" required="">
                         </div>
                     </div>
                     <div class="form-group">
