--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -40,7 +40,7 @@
                                 <h5>Title (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE" required="">
+                                <input  asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -48,7 +48,7 @@
                                 <h5>Title (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG" required="">
+                                <input  asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG" required="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,7 +56,7 @@
                                 <h5>Title (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU" required="">
+                                <input  asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU" required="">
                             </div>
                         </div>
                        
